--- a/test/react/src/index.html
+++ b/test/react/src/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>React crud Demo using JsStore</title>
-    <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/flexstyle@1.0.3/dist/lib.min.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="app"></div>
-     
+
 </body>
 
 </html>
